kubeconfig/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: decidim-k8s-db-svc
  labels:
    app: decidim-k8s-db
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: decidim-k8s-db
