kubeconfig/load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: decidim-k8s-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: decidim-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
